--- a/styles/login-signup.css
+++ b/styles/login-signup.css
@@ -2,12 +2,21 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
     line-height: 1.5;
     min-height: 100vh;
-    background: #f3f3f3;
+    background: #f4f4f4;
     flex-direction: column;
     margin: 0;
+}
+
+.container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rbga(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
 }
 
 .main {
@@ -48,13 +57,58 @@ button {
     border: none;
     color: white;
     cursor: pointer;
-    background-color: #4CAF50;
+    background-color: #5cb85c;
     width: 100%;
     font-size: 16px;
+}
+
+button:hover {
+    background-color: #4cae4c;
 }
 
 .wrap {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+#message {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.error {
+    color: red;
+    font-size: 0.9em;
+}
+
+.password-hint {
+    font-size: 0.9em;
+    color: #666;
+    margin-top: 5px;
+    display: none;
+}
+
+.password-strength div {
+    height: 5px;
+    border-radius: 4px;
+}
+
+.weak {
+    width: 33%;
+    background-color: red;
+}
+
+.medium {
+    width: 66%;
+    background-color: orange;
+}
+
+.strong {
+    width: 100%;
+    background-color: green;
 }
